Modified singUp.html & login.html

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bootstrap": "^5.2.3",
     "gh-pages": "^5.0.0",
     "glob": "^10.2.2",
+    "module_name": "^1.0.0",
+    "require.js": "^1.0.0",
     "sass": "^1.61.0",
     "sass-loader": "^13.2.2",
     "vite-plugin-live-reload": "^3.0.2"
